apps/truenas-paperless-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas-paperless-service
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 30070
    targetPort: 30070

---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-paperless-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.179
    ports:
      - port: 30070

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: paperless.erix-homelab.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas-paperless-service
            port:
              number: 30070
  tls:
  - secretName: erix-homelab-site-tls
    hosts:
    - paperless.erix-homelab.site
